--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+- We need a way to add new restaurants to our app's database
+- We need to be able to give each restaurant an overall rating on a scale of 1-5, with 1 being the lowest and 5 the highest.
+- We need to be able to mark the last time we have visited the restaurant
+- When we visit the root url of the app, we want to be told what restaurant we should go to today. That restaurant should be chosen based on a combination of how much we like the restaurant and the last time we have been there. It is up to you to decide how that's going to happen, but I never want to be told to go to the same restaurant two days in a row unless there is only one restaurant in the system.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- The user interface can be as basic as you want it to be; it's an internally facing page so no need to spend a lot of time making it pretty.
+- Bonus points if you send us a link to your app, live on Heroku (https://devcenter.heroku.com/articles/getting-started-with-ruby#introduction)
+- You can code the app with a single user in mind, but even more bonus points if you write multi-user support in so that different people can rate restaurants. If you choose to do this please use the average rating for a restaurant when picking where we eat today. Fair is fair.
+- PLEASE do not spend a lot of time with user authentication. All we care about is how you'd structure the model relationships.
